# aoc2023

./: pyproject.toml
aoc2023/: day1.py  main.py
tests/: test_all.py
